--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@
 
 body {
     background-color: rgba(245, 248, 255, 1);
-    font-family: "inter"
+    font-family: "inter";
+    width: 100%
     
 }
 
@@ -89,5 +90,40 @@ body {
 
 
 /* navbar end */
+
+
+.banner-div {
+    width: 764px;
+    --c-width: 764px;
+    height: 315px;
+   
+    text-align: center;
+    position: absolute;
+    top: 188px;
+    left: calc(50% - (var(--c-width) / 2)); 
+    font-family: "raleway";
+    /* margin: 0 auto; */
+    
+}
+
+.banner-div p {
+    color: rgba(37, 36, 50, 1);
+    font-weight: 700;
+    font-size: 73.34px;
+    line-height: 73.34px;
+}
+
+.banner-div button {
+    width: 211px;
+    height: 60px;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(37, 36, 50, 1);
+    margin-top: 45px;
+}
+
+
 
 
