--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@
 
 body {
     background-color: rgba(245, 248, 255, 1);
+    /* background-color: black; */
     font-family: "inter";
-    width: 100%
+    width: 100%;
+    
     
 }
 
@@ -91,18 +93,26 @@ body {
 
 /* navbar end */
 
+/* banner */
+
+.banner-div-container {
+    width: 100%;
+    margin-top: 90px;
+    display: flex;
+    justify-content: center;
+}
 
 .banner-div {
     width: 764px;
-    --c-width: 764px;
-    height: 315px;
+    /* --c-width: 764px; */
+    /* height: 315px; */
    
     text-align: center;
-    position: absolute;
-    top: 188px;
-    left: calc(50% - (var(--c-width) / 2)); 
+    /* position: absolute; */
+    /* top: 188px; */
+    /* left: calc(50% - (var(--c-width) / 2));  */
     font-family: "raleway";
-    /* margin: 0 auto; */
+    margin: 0 auto;
     
 }
 
@@ -124,6 +134,117 @@ body {
     margin-top: 45px;
 }
 
+
+/* banner end */
+
+
+/* info div */
+
+.info-div {
+    /* border: 1px solid black; */
+    padding: 0 120px;
+    margin-top: 180px;
+    /* margin-bottom: 10px; */
+}
+
+.info-div > p {
+    font-family: 'raleway';
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 72px;
+    color: rgba(37, 36, 50, 1)
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 25px;
+    margin-top: 50px;
+}
+
+.card {
+    /* border: 1px solid red; */
+    /* height: 200px; */
+    width: 100%;
+    padding: 30px 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.two-rows {
+    grid-row: span 2;
+    display: flex;
+    font-display: column;
+    gap: 40px;
+}
+
+.two-cols {
+    grid-column: span 2;
+    display: flex;
+    flex-direction: row;
+    padding: 20px 25px;
+}
+
+.card-img-div {
+    width: 44px;
+    height: 44px;
+    background-color: rgba(245, 248, 255, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 9px;
+}
+
+.card-img-div img {
+    width: 24px;
+    height: 24px;
+}
+
+.card-heading {
+    font-family: 'inter';
+    font-weight: 600;
+    font-size: 19.77px;
+    line-height: 23.73px;
+    color: rgba(37, 36, 50, 1)
+}
+
+.card-text {
+    font-family: 'inter';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    color: rgba(137, 135, 161, 1)
+}
+
+.blue-rectangle {
+    background-color: rgba(91, 84, 255, 1);
+    border-radius: 5px;
+    
+    /* width: 218px; */
+    width: 80%;
+    /* height: 214px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.two-cols div:first-child{
+    margin: 5px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+.two-rows div:first-child{
+    margin: 5px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 
 
 
