--- a/styles.css
+++ b/styles.css
@@ -247,4 +247,135 @@ body {
 }
 
 
+/* info end */
+
+/* work div */
+
+.work-div {
+    /* border: 1px solid black; */
+    margin-top: 180px;
+    width: 100%;
+    position: relative;
+}
+
+#background-img {
+    width: 100%;
+    text-align: center;
+    mix-blend-mode: color-burn;
+    position: absolute;
+    top: -80px;
+    z-index: -1;
+}
+
+.work-top-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+.work-top-div div:nth-child(1) {
+    width: 25%;
+    /* border: 1px solid red; */
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+}
+
+
+.work-top-div div:nth-child(1) div {
+    /* position: relative */
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.work-top-div div:nth-child(3) {
+    width: 30%;
+    /* border: 1px solid blue */
+}
+
+.work-top-div div:nth-child(2) p:first-child{
+    font-family: "inter";
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 72px;
+    color: rgba(37, 36, 50, 1);
+}
+
+.work-top-div div:nth-child(2) p:last-child {
+    font-family: inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    color: rgba(137, 135, 161, 1);
+    
+}
+
+.work-top-div div:nth-child(2) {
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+}
+
+
+.work-top-div div:nth-child(1) div img {
+    width: 25px;    
+}
+
+
+.work-top-div div:nth-child(3) {
+    width: 25%;
+    /* border: 1px solid red; */
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+}
+
+
+.work-top-div div:nth-child(3) div {
+    /* position: relative */
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.work-top-div div:nth-child(3) div img {
+    width: 25px;    
+}
+
+
+.work-bottom-div {
+    /* border: 1px solid black; */
+    width: 100%;
+    height: 618px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 65px;
+}
+
+.work-bottom-div div:nth-child(1) {
+    padding: 35px 35px 35px 0px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.work-bottom-div div:nth-child(2) {
+    padding: 35px 35px 35px 35px;
+    background-color: #fff;
+    border-radius: 10px;
+    opacity: 90%;
+}
+
+.work-bottom-div div:nth-child(3) {
+    padding: 35px 0px 35px 35px;
+    background-color: #fff;
+    border-radius: 10px;
+}
 
